FPackerLibrary/Antlr/Enforce/EnforceParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/dev/Desktop/FPacker 2.0/FPacker 2.0/Antlr/Enforce\EnforceParser.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

 namespace FPackerLibrary.Antlr.Enforce; 
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class EnforceParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SINGLE_LINE_COMMENT=1, EMPTY_DELIMITED_COMMENT=2, DELIMITED_COMMENT=3, 
		WHITESPACES=4, PREPROCESS=5, AUTO=6, AUTOPTR=7, PRIVATE=8, PROTECTED=9, 
		STATIC=10, OVERRIDE=11, PROTO=12, NATIVE=13, NOTNULL=14, EVENT=15, EXTERNAL=16, 
		REF=17, REFERENCE=18, CONST=19, OUT=20, OWNED=21, INOUT=22, MODDED=23, 
		NEW=24, DELETE=25, CLASS=26, ENUM=27, EXTENSION=28, TYPEDEF=29, RETURN=30, 
		THIS=31, SUPER=32, LOCAL=33, THREAD=34, TYPE_INT=35, TYPE_FLOAT=36, TYPE_BOOL=37, 
		TYPE_STRING=38, TYPE_VECTOR=39, VOID=40, VOLATILE=41, IF=42, ELSE=43, 
		SWITCH=44, CASE=45, BREAK=46, FOR=47, FOREACH=48, WHILE=49, CONTINUE=50, 
		DEFAULT=51, OPEN_BRACE=52, CLOSE_BRACE=53, OPEN_BRACKET=54, CLOSE_BRACKET=55, 
		OPEN_PARENS=56, CLOSE_PARENS=57, DOT=58, COMMA=59, COLON=60, SEMICOLON=61, 
		QMARK=62, PLUS=63, MINUS=64, DQUOTE=65, STAR=66, DIV=67, PERCENT=68, AMP=69, 
		BITWISE_OR=70, CARET=71, BANG=72, TILDE=73, ASSIGNMENT=74, LT=75, GT=76, 
		OP_INC=77, OP_DEC=78, OP_AND=79, OP_OR=80, OP_EQ=81, OP_NE=82, OP_LE=83, 
		OP_GE=84, OP_LEFTSHIFT=85, OP_RIGHTSHIFT=86, OP_ADD_ASSIGN=87, OP_SUB_ASSIGN=88, 
		OP_MULT_ASSIGN=89, OP_DIV_ASSIGN=90, OP_OR_ASSIGN=91, OP_AND_ASSIGN=92, 
		OP_LEFTSHFT_ASSIGN=93, SPACE=94, OP_RIGHTSHFT_ASSIGN=95, LITERAL_STRING=96, 
		LITERAL_INTEGER=97, LITERAL_FLOAT=98, LITERAL_BOOLEAN=99, LITERAL_NULL=100, 
		IDENTIFIER=101, REUSED_MODIFIERS=102, FUNC_MODIFIER=103, FUNC_PARAM_MODIFIER=104, 
		VARIABLE_MODIFIER=105, CLASS_MODIFIER=106;
	public const int
		RULE_computationalUnit = 0, RULE_variableModifier = 1, RULE_methodModifier = 2, 
		RULE_parameterModifier = 3, RULE_globalDeclaration = 4, RULE_classDeclaration = 5, 
		RULE_classOrEnumExtension = 6, RULE_typeParameters = 7, RULE_typeParameter = 8, 
		RULE_enumDeclaration = 9, RULE_enumBody = 10, RULE_enumValue = 11, RULE_annotation = 12, 
		RULE_classBody = 13, RULE_typeDeclaration = 14, RULE_methodDeclaration = 15, 
		RULE_methodBody = 16, RULE_typeTypeOrVoid = 17, RULE_fieldDeclaration = 18, 
		RULE_variableDeclarators = 19, RULE_variableDeclarator = 20, RULE_variableDeclaratorId = 21, 
		RULE_formalParameters = 22, RULE_formalParameterList = 23, RULE_formalParameter = 24, 
		RULE_formalParameterUndefined = 25, RULE_formalParameterDefined = 26, 
		RULE_variableInitializer = 27, RULE_arrayInitializer = 28, RULE_literal = 29, 
		RULE_literalBoolean = 30, RULE_literalString = 31, RULE_literalNull = 32, 
		RULE_literalNumeric = 33, RULE_literalFloat = 34, RULE_literalInteger = 35, 
		RULE_literalVector = 36, RULE_classType = 37, RULE_block = 38, RULE_blockStatement = 39, 
		RULE_statement = 40, RULE_deleteStatment = 41, RULE_ifStatement = 42, 
		RULE_elseStatement = 43, RULE_forStatement = 44, RULE_foreachStatement = 45, 
		RULE_whileStatement = 46, RULE_switchStatement = 47, RULE_switchBlockStatementGroup = 48, 
		RULE_switchLabel = 49, RULE_forControl = 50, RULE_forInit = 51, RULE_foreachControl = 52, 
		RULE_forEachVariableList = 53, RULE_forEachVariable = 54, RULE_localVariableDeclaration = 55, 
		RULE_localVariableDeclarationRegular = 56, RULE_localVariableDeclarationAssumptuative = 57, 
		RULE_identifier = 58, RULE_parExpression = 59, RULE_expressionList = 60, 
		RULE_methodCall = 61, RULE_expression = 62, RULE_primary = 63, RULE_creator = 64, 
		RULE_createdName = 65, RULE_innerCreator = 66, RULE_arrayCreatorRest = 67, 
		RULE_classCreatorRest = 68, RULE_explicitGenericInvocation = 69, RULE_typeArgumentsOrDiamond = 70, 
		RULE_nonWildcardTypeArgumentsOrDiamond = 71, RULE_nonWildcardTypeArguments = 72, 
		RULE_typeList = 73, RULE_typeListChild = 74, RULE_typeType = 75, RULE_primitiveType = 76, 
		RULE_typeArguments = 77, RULE_typeArgument = 78, RULE_superSuffix = 79, 
		RULE_explicitGenericInvocationSuffix = 80, RULE_arguments = 81;
	public static readonly string[] ruleNames = {
		"computationalUnit", "variableModifier", "methodModifier", "parameterModifier", 
		"globalDeclaration", "classDeclaration", "classOrEnumExtension", "typeParameters", 
		"typeParameter", "enumDeclaration", "enumBody", "enumValue", "annotation", 
		"classBody", "typeDeclaration", "methodDeclaration", "methodBody", "typeTypeOrVoid", 
		"fieldDeclaration", "variableDeclarators", "variableDeclarator", "variableDeclaratorId", 
		"formalParameters", "formalParameterList", "formalParameter", "formalParameterUndefined", 
		"formalParameterDefined", "variableInitializer", "arrayInitializer", "literal", 
		"literalBoolean", "literalString", "literalNull", "literalNumeric", "literalFloat", 
		"literalInteger", "literalVector", "classType", "block", "blockStatement", 
		"statement", "deleteStatment", "ifStatement", "elseStatement", "forStatement", 
		"foreachStatement", "whileStatement", "switchStatement", "switchBlockStatementGroup", 
		"switchLabel", "forControl", "forInit", "foreachControl", "forEachVariableList", 
		"forEachVariable", "localVariableDeclaration", "localVariableDeclarationRegular", 
		"localVariableDeclarationAssumptuative", "identifier", "parExpression", 
		"expressionList", "methodCall", "expression", "primary", "creator", "createdName", 
		"innerCreator", "arrayCreatorRest", "classCreatorRest", "explicitGenericInvocation", 
		"typeArgumentsOrDiamond", "nonWildcardTypeArgumentsOrDiamond", "nonWildcardTypeArguments", 
		"typeList", "typeListChild", "typeType", "primitiveType", "typeArguments", 
		"typeArgument", "superSuffix", "explicitGenericInvocationSuffix", "arguments"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, "'auto'", "'autoptr'", "'private'", 
		"'protected'", "'static'", "'override'", "'proto'", "'native'", "'notnull'", 
		"'event'", "'external'", "'ref'", "'reference'", "'const'", "'out'", "'owned'", 
		"'inout'", "'modded'", "'new'", "'delete'", "'class'", "'enum'", "'extends'", 
		"'typedef'", "'return'", "'this'", "'super'", "'local'", "'thread'", "'int'", 
		"'float'", "'bool'", "'string'", "'vector'", "'void'", "'volatile'", "'if'", 
		"'else'", "'switch'", "'case'", "'break'", "'for'", "'foreach'", "'while'", 
		"'contine'", "'default'", "'{'", "'}'", "'['", "']'", "'('", "')'", "'.'", 
		"','", "':'", "';'", "'?'", "'+'", "'-'", "'\"'", "'*'", "'/'", "'%'", 
		"'&'", "'|'", "'^'", "'!'", "'~'", "'='", "'<'", "'>'", "'++'", "'--'", 
		"'&&'", "'||'", "'=='", "'!='", "'<='", "'>='", "'<<'", "'>>'", "'+='", 
		"'-='", "'*='", "'/='", "'|='", "'&='", "'<<='", "' '", "'>>='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SINGLE_LINE_COMMENT", "EMPTY_DELIMITED_COMMENT", "DELIMITED_COMMENT", 
		"WHITESPACES", "PREPROCESS", "AUTO", "AUTOPTR", "PRIVATE", "PROTECTED", 
		"STATIC", "OVERRIDE", "PROTO", "NATIVE", "NOTNULL", "EVENT", "EXTERNAL", 
		"REF", "REFERENCE", "CONST", "OUT", "OWNED", "INOUT", "MODDED", "NEW", 
		"DELETE", "CLASS", "ENUM", "EXTENSION", "TYPEDEF", "RETURN", "THIS", "SUPER", 
		"LOCAL", "THREAD", "TYPE_INT", "TYPE_FLOAT", "TYPE_BOOL", "TYPE_STRING", 
		"TYPE_VECTOR", "VOID", "VOLATILE", "IF", "ELSE", "SWITCH", "CASE", "BREAK", 
		"FOR", "FOREACH", "WHILE", "CONTINUE", "DEFAULT", "OPEN_BRACE", "CLOSE_BRACE", 
		"OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_PARENS", "CLOSE_PARENS", "DOT", 
		"COMMA", "COLON", "SEMICOLON", "QMARK", "PLUS", "MINUS", "DQUOTE", "STAR", 
		"DIV", "PERCENT", "AMP", "BITWISE_OR", "CARET", "BANG", "TILDE", "ASSIGNMENT", 
		"LT", "GT", "OP_INC", "OP_DEC", "OP_AND", "OP_OR", "OP_EQ", "OP_NE", "OP_LE", 
		"OP_GE", "OP_LEFTSHIFT", "OP_RIGHTSHIFT", "OP_ADD_ASSIGN", "OP_SUB_ASSIGN", 
		"OP_MULT_ASSIGN", "OP_DIV_ASSIGN", "OP_OR_ASSIGN", "OP_AND_ASSIGN", "OP_LEFTSHFT_ASSIGN", 
		"SPACE", "OP_RIGHTSHFT_ASSIGN", "LITERAL_STRING", "LITERAL_INTEGER", "LITERAL_FLOAT", 
		"LITERAL_BOOLEAN", "LITERAL_NULL", "IDENTIFIER", "REUSED_MODIFIERS", "FUNC_MODIFIER", 
		"FUNC_PARAM_MODIFIER", "VARIABLE_MODIFIER", "CLASS_MODIFIER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "EnforceParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static EnforceParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public EnforceParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public EnforceParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ComputationalUnitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(EnforceParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public GlobalDeclarationContext[] globalDeclaration() {
			return GetRuleContexts<GlobalDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalDeclarationContext globalDeclaration(int i) {
			return GetRuleContext<GlobalDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDeclarationContext[] typeDeclaration() {
			return GetRuleContexts<TypeDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDeclarationContext typeDeclaration(int i) {
			return GetRuleContext<TypeDeclarationContext>(i);
		}
		public ComputationalUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_computationalUnit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEnforceParserListener typedListener = listener as IEnforceParserListener;
			if (typedListener != null) typedListener.EnterComputationalUnit(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEnforceParserListener typedListener = listener as IEnforceParserListener;
			if (typedListener != null) typedListener.ExitComputationalUnit(this);
		}
	}

	[RuleVersion(0)]
	public ComputationalUnitContext computationalUnit() {
		ComputationalUnitContext _localctx = new ComputationalUnitContext(Context, State);
		EnterRule(_localctx, 0, RULE_computationalUnit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 168;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AUTOPTR) | (1L << PRIVATE) | (1L << PROTECTED) | (1L << STATIC) | (1L << OVERRIDE) | (1L << PROTO) | (1L << NATIVE) | (1L << EVENT) | (1L << EXTERNAL) | (1L << REF) | (1L << REFERENCE) | (1L << CONST) | (1L << OWNED) | (1L << MODDED) | (1L << CLASS) | (1L << ENUM) | (1L << TYPEDEF) | (1L << TYPE_INT) | (1L << TYPE_FLOAT) | (1L << TYPE_BOOL) | (1L << TYPE_STRING) | (1L << TYPE_VECTOR) | (1L << VOID) | (1L << VOLATILE) | (1L << OPEN_BRACKET) | (1L << SEMICOLON))) != 0) || _la==IDENTIFIER) {
				{
				State = 166;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 164;
					globalDeclaration();
					}
					break;
				case 2:
					{
					State = 165;
					typeDeclaration();
					}
					break;
				}
				}
				State = 170;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 171;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableModifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PRIVATE() { return GetToken(EnforceParser.PRIVATE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROTECTED() { return GetToken(EnforceParser.PROTECTED, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STATIC() { return GetToken(EnforceParser.STATIC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AUTOPTR() { return GetToken(EnforceParser.AUTOPTR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROTO() { return GetToken(EnforceParser.PROTO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REF() { return GetToken(EnforceParser.REF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REFERENCE() { return GetToken(EnforceParser.REFERENCE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONST() { return GetToken(EnforceParser.CONST, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TYPEDEF() { return GetToken(EnforceParser.TYPEDEF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OWNED() { return GetToken(EnforceParser.OWNED, 0); }
		public VariableModifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableModifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEnforceParserListener typedListener = listener as IEnforceParserListener;
			if (typedListener != null) typedListener.EnterVariableModifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEnforceParserListener typedListener = listener as IEnforceParserListener;
			if (typedListener != null) typedListener.ExitVariableModifier(this);
		}
	}

	[RuleVersion(0)]
	public VariableModifierContext variableModifier() {
		VariableModifierContext _localctx = new VariableModifierContext(Context, State);
		EnterRule(_localctx, 2, RULE_variableModifier);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 173;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AUTOPTR) | (1L << PRIVATE) | (1L << PROTECTED) | (1L << STATIC) | (1L << PROTO) | (1L << REF) | (1L << REFERENCE) | (1L << CONST) | (1L << OWNED) | (1L << TYPEDEF))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MethodModifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PRIVATE() { return GetToken(EnforceParser.PRIVATE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROTECTED() { return GetToken(EnforceParser.PROTECTED, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STATIC() { return GetToken(EnforceParser.STATIC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OVERRIDE() { return GetToken(EnforceParser.OVERRIDE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROTO() { return GetToken(EnforceParser.PROTO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NATIVE() { return GetToken(EnforceParser.NATIVE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REF() { return GetToken(EnforceParser.REF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VOLATILE() { return GetToken(EnforceParser.VOLATILE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EXTERNAL() { return GetToken(EnforceParser.EXTERNAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EVENT() { return GetToken(EnforceParser.EVENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OWNED() { return GetToken(EnforceParser.OWNED, 0); }
		public MethodModifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_methodModifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEnforceParserListener typedListener = listener as IEnforceParserListener;
			if (typedListener != null) typedListener.EnterMethodModifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEnforceParserListener typedListener = listener as IEnforceParserListener;
			if (typedListener != null) typedListener.ExitMethodModifier(this);
		}
	}

	[RuleVersion(0)]
	public MethodModifierContext methodModifier() {
		MethodModifierContext _localctx = new MethodModifierContext(Context, State);
		EnterRule(_localctx, 4, RULE_methodModifier);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 175;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRIVATE) | (1L << PROTECTED) | (1L << STATIC) | (1L << OVERRIDE) | (1L << PROTO) | (1L << NATIVE) | (1L << EVENT) | (1L << EXTERNAL) | (1L << REF) | (1L << OWNED) | (1L << VOLATILE))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParameterModifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OWNED() { return GetToken(EnforceParser.OWNED, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OUT() { return GetToken(EnforceParser.OUT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INOUT() { return GetToken(EnforceParser.INOUT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NOTNULL() { return GetToken(EnforceParser.NOTNULL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REF() { return GetToken(EnforceParser.REF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PRIVATE() { return GetToken(EnforceParser.PRIVATE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROTECTED() { return GetToken(EnforceParser.PROTECTED, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STATIC() { return GetToken(EnforceParser.STATIC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AUTOPTR() { return GetToken(EnforceParser.AUTOPTR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROTO() { return GetToken(EnforceParser.PROTO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONST() { return GetToken(EnforceParser.CONST, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TYPEDEF() { return GetToken(EnforceParser.TYPEDEF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LOCAL() { return GetToken(EnforceParser.LOCAL, 0); }
		public ParameterModifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parameterModifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEnforceParserListener typedListener = listener as IEnforceParserListener;
			if (typedListener != null) typedListener.EnterParameterModifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEnforceParserListener typedListener = listener as IEnforceParserListener;
			if (typedListener != null) typedListener.ExitParameterModifier(this);
		}
	}
